# funsearch

./: .gitignore  README.md  constants.py  database.py  eval.py  evaluation.py  llm.py  main.py  pyproject.toml  sampler.py  scratch.py  search.py  utils.py
