[project]
name = "funsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipython>=8.12.3",
    "loguru>=0.7.3",
    "numpy>=1.24.4",
    "openai>=2.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.14.6",
]
